# Spidy_ROS

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: 2nodes.launch  launch_algorithm.launch  launch_sinus.launch  server.launch  server_no_raspberry.launch  test.launch
msg/: sensors.msg
msgs/: PWM.msg
src/: Algorithm_node.cpp  Algorithm_node_2leg.cpp  Sinus_node.cpp  client_socket_topic_PC.cpp  client_socket_topic_PC.cpp.old  server_i2c_socket_Raspberry.py
src/Algorithm_lib/: NEAT.cpp  NEAT.h  debug.h  debug_algorithm.h
src/security_copy/: client_socket_topic_PC.cpp  server_i2c_socket_Raspberry.py  server_i2c_socket_Raspberry.py.old.12_1_17
src/test/: mock_server_i2c_socket_Raspberry.py  test_PWMaction_client.cpp
